--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "listen_to_this",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Spotify",
+  "name": "web-api-auth-examples",
+  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
+  "version": "0.0.2",
+  "dependencies": {
+    "cookie-parser": "1.3.2",
+    "express": "~4.16.0",
+    "cors": "^2.8.4",
+    "start": "node index.js",
+    "querystring": "~0.2.0",
+    "request": "~2.83.0"
+  }
 }
