--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
-  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
-  "version": "0.0.2",
+  "author": "",
+  "name": "listen_to_this",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts":{
+    "start": "node index.js"
+  },
   "dependencies": {
     "cookie-parser": "1.3.2",
     "express": "~4.16.0",
     "cors": "^2.8.4",
     "querystring": "~0.2.0",
+    "start": "node index.js",
     "request": "~2.83.0"
   }
 }
