--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts":{
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "cookie-parser": "1.3.2",
